<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0F3"
    tools:context="com.bunny.TimeLockScreen.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="●免责声明●：本软件只用于学习交流，请勿它用，且不一定适用于某些手机。如造成不良损失和影响，开发者不负任何责任。"
        android:textColor="#FF0000"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:shape_roundRect_backgroundColor="#41AEFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setTimeTitle"
        android:textColor="#2B91FF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        app:shape_roundRect_backgroundColor="#41AEFF" />

    <com.bunny.TimeLockScreen.sshadkany.RectButton
        android:id="@+id/activateBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00"
        app:shape_roundRect_backgroundColor="#ECF0F3"
        app:shape_roundRect_bottomLeftRadius="50dp"
        app:shape_roundRect_bottomRightRadius="50dp"
        app:shape_roundRect_topLeftRadius="50dp"
        app:shape_roundRect_topRightRadius="50dp">

        <ImageView
            android:id="@+id/activateBtnImg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@mipmap/activate"
            app:tint="#9123FF" />


    </com.bunny.TimeLockScreen.sshadkany.RectButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activateBtnTitle"
        android:textColor="#2B91FF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:shape_roundRect_backgroundColor="#41AEFF" />

    <com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView
        android:id="@+id/hour"
        android:layout_width="145dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:shape_roundRect_bottomLeftRadius="10dp"
        app:shape_roundRect_bottomRightRadius="10dp"
        app:shape_roundRect_shadow_type="small_inner_shadow"
        app:shape_roundRect_topLeftRadius="10dp"
        app:shape_roundRect_topRightRadius="10dp">

        <com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_margin="8dp"
            app:shape_roundRect_backgroundColor="#ECF0F3"
            app:shape_roundRect_bottomLeftRadius="12dp"
            app:shape_roundRect_bottomRightRadius="12dp"
            app:shape_roundRect_shadow_type="drop_shadow"
            app:shape_roundRect_topLeftRadius="12dp"
            app:shape_roundRect_topRightRadius="12dp">

            <EditText
                android:id="@+id/hourEt"
                android:layout_width="58dp"
                android:layout_height="84dp"
                android:layout_margin="35dp"
                android:hint="@string/hourEt"
                android:inputType="numberDecimal"
                android:textColor="#418DFF"
                android:textColorHint="#9C9A9A" />

        </com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView>
    </com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView>

    <com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView
        android:id="@+id/min"
        android:layout_width="145dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:shape_roundRect_bottomLeftRadius="10dp"
        app:shape_roundRect_bottomRightRadius="10dp"
        app:shape_roundRect_shadow_type="small_inner_shadow"
        app:shape_roundRect_topLeftRadius="10dp"
        app:shape_roundRect_topRightRadius="10dp">

        <com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_margin="8dp"
            app:shape_roundRect_backgroundColor="#ECF0F3"
            app:shape_roundRect_bottomLeftRadius="12dp"
            app:shape_roundRect_bottomRightRadius="12dp"
            app:shape_roundRect_shadow_type="drop_shadow"
            app:shape_roundRect_topLeftRadius="12dp"
            app:shape_roundRect_topRightRadius="12dp">

            <EditText
                android:id="@+id/minEt"
                android:layout_width="58dp"
                android:layout_height="84dp"
                android:layout_margin="35dp"
                android:hint="@string/minEt"
                android:inputType="numberDecimal"
                android:textColor="#418DFF"
                android:textColorHint="#9C9A9A" />

        </com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView>
    </com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView>

    <com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView
        android:id="@+id/second"
        android:layout_width="145dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:shape_roundRect_bottomLeftRadius="10dp"
        app:shape_roundRect_bottomRightRadius="10dp"
        app:shape_roundRect_shadow_type="small_inner_shadow"
        app:shape_roundRect_topLeftRadius="10dp"
        app:shape_roundRect_topRightRadius="10dp">

        <com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_margin="8dp"
            app:shape_roundRect_backgroundColor="#ECF0F3"
            app:shape_roundRect_bottomLeftRadius="12dp"
            app:shape_roundRect_bottomRightRadius="12dp"
            app:shape_roundRect_shadow_type="drop_shadow"
            app:shape_roundRect_topLeftRadius="12dp"
            app:shape_roundRect_topRightRadius="12dp">

            <EditText
                android:id="@+id/secondEt"
                android:layout_width="58dp"
                android:layout_height="84dp"
                android:layout_margin="35dp"
                android:hint="@string/secEt"
                android:inputType="numberDecimal"
                android:textColor="#418DFF"
                android:textColorHint="#9C9A9A" />

        </com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView>
    </com.bunny.TimeLockScreen.sshadkany.shapes.RoundRectView>

    <TextView
        android:id="@+id/finalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2B91FF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475"
        app:shape_roundRect_backgroundColor="#41AEFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="●注意●：一旦锁屏后，一定要输入锁屏密码才能使用手机，请问问自己是否记得密码！使用前，请将本应用加入应用白名单或者让其可在后台运行！"
        android:textColor="#FF0000"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:shape_roundRect_backgroundColor="#41AEFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="开始定时"
        android:textColor="#2B91FF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"
        app:shape_roundRect_backgroundColor="#41AEFF" />

    <com.bunny.TimeLockScreen.sshadkany.RectButton
        android:id="@+id/setTimeBtn"
        android:layout_width="180dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        app:shape_roundRect_backgroundColor="#ECF0F3"
        app:shape_roundRect_bottomLeftRadius="50dp"
        app:shape_roundRect_bottomRightRadius="50dp"
        app:shape_roundRect_topLeftRadius="50dp"
        app:shape_roundRect_topRightRadius="50dp">

        <ImageView
            android:id="@+id/setTimeBtnImg"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@mipmap/set_time"
            app:tint="#2C25FF" />


    </com.bunny.TimeLockScreen.sshadkany.RectButton>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30分定时"
        android:textColor="#2B91FF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"
        app:shape_roundRect_backgroundColor="#41AEFF" />

    <com.bunny.TimeLockScreen.sshadkany.RectButton
        android:id="@+id/thirtyMinBtn"
        android:layout_width="180dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        app:shape_roundRect_backgroundColor="#ECF0F3"
        app:shape_roundRect_bottomLeftRadius="50dp"
        app:shape_roundRect_bottomRightRadius="50dp"
        app:shape_roundRect_topLeftRadius="50dp"
        app:shape_roundRect_topRightRadius="50dp">

        <ImageView
            android:id="@+id/thirtyMinBtnImg"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@mipmap/thirty_min"
            app:tint="#2C25FF" />


    </com.bunny.TimeLockScreen.sshadkany.RectButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testLock"
        android:textColor="#2B91FF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675"
        app:shape_roundRect_backgroundColor="#41AEFF" />

    <com.bunny.TimeLockScreen.sshadkany.RectButton
        android:id="@+id/testLockBtn"
        android:layout_width="280dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:shape_roundRect_backgroundColor="#ECF0F3"
        app:shape_roundRect_bottomLeftRadius="50dp"
        app:shape_roundRect_bottomRightRadius="50dp"
        app:shape_roundRect_topLeftRadius="50dp"
        app:shape_roundRect_topRightRadius="50dp">

        <ImageView
            android:id="@+id/testLockBtnImg"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@mipmap/test_lock"
            app:tint="#2C80FF" />


    </com.bunny.TimeLockScreen.sshadkany.RectButton>

</androidx.constraintlayout.widget.ConstraintLayout>
